--- a/android/RestoClient/AndroidManifest.xml
+++ b/android/RestoClient/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-     package="be.ugent.zeus.resto.client">
-    <application>
-         <activity android:name=".HelloWorld" android:label="Hello world">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="be.ugent.zeus.resto.client">
+    <application android:icon="@drawable/icon" android:label="Resto Menu">
+         <activity android:name=".RestoMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
