List of resto's in scraper + about dialog
* Add a small "about" dialog
* Remove android marker in favor of stock "star_on" marker
* Add a list of resto's with info to the scraper in json format

--- a/android/RestoClient/nbproject/project.properties
+++ b/android/RestoClient/nbproject/project.properties
@@ -1,3 +1,5 @@
+application.title=RestoClient
+application.vendor=blackskad
 assets.dir=
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java
@@ -45,7 +47,7 @@ javadoc.windowtitle=
 main.component=be.ugent.zeus.resto.client
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=Android
+platform.active=Android_Google
 resource.dir=res
 run.classpath=\
     ${javac.classpath}:\
