--- a/android/RestoClient/AndroidManifest.xml
+++ b/android/RestoClient/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="be.ugent.zeus.resto.client">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+  android:versionCode="0" android:versionName="0.1"
+  package="be.ugent.zeus.resto.client">
   <application android:icon="@drawable/icon" android:label="Resto Menu">
     <activity android:name=".RestoMenu">
       <intent-filter>
