--- a/android/RestoClient/AndroidManifest.xml
+++ b/android/RestoClient/AndroidManifest.xml
@@ -18,4 +18,6 @@
     <uses-library android:name="com.google.android.maps" />
   </application>
   <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
