--- a/android/RestoClient/AndroidManifest.xml
+++ b/android/RestoClient/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   android:versionCode="0" android:versionName="0.1"
   package="be.ugent.zeus.resto.client">
-  <application android:icon="@drawable/icon" android:label="Resto Menu">
+  <application android:icon="@drawable/logo" android:label="Resto Menu">
     <activity android:name=".RestoMenu">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
@@ -15,6 +15,11 @@
         <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
     </activity>
+    <service android:name=".data.MenuProvider">
+      <intent-filter>
+        <action android:name="be.ugent.zeus.resto.client.data.MenuProvider" />
+      </intent-filter>
+    </service>
     <uses-library android:name="com.google.android.maps" />
   </application>
   <uses-permission android:name="android.permission.INTERNET" />
