--- a/android/RestoClient/AndroidManifest.xml
+++ b/android/RestoClient/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  android:versionCode="0" android:versionName="0.1"
+  android:versionCode="2" android:versionName="1.1"
   package="be.ugent.zeus.resto.client">
   <application android:icon="@drawable/logo" android:label="Resto Menu">
     <activity android:name=".RestoMenu">
@@ -25,4 +25,5 @@
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-sdk android:minSdkVersion="5" />
 </manifest>
