use IntentServices & beautifications
Use IntentServices to request data from the online service. This
removes the need for those ugly threads and lock files. It also
enables some cleanups in the ui, such as progress bars while
we're waiting for an item to be loaded.

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -15,9 +15,14 @@
         <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
     </activity>
-    <service android:name=".data.MenuProvider">
+    <service android:name=".data.services.MenuService">
       <intent-filter>
-        <action android:name="be.ugent.zeus.resto.client.data.MenuProvider" />
+        <action android:name="be.ugent.zeus.resto.client.data.services.MenuService" />
+      </intent-filter>
+    </service>
+    <service android:name=".data.services.RestoService">
+      <intent-filter>
+        <action android:name="be.ugent.zeus.resto.client.data.services.RestoService" />
       </intent-filter>
     </service>
     <uses-library android:name="com.google.android.maps" />
