--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   android:versionCode="8" android:versionName="1.7"
   package="be.ugent.zeus.resto.client">
-  <application android:icon="@drawable/logo" android:label="Resto Menu" android:theme="@android:style/Theme.Light">
+  <application android:icon="@drawable/logo" android:label="Heracles" android:theme="@android:style/Theme.Light">
     <activity android:name=".RestoMenu">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
