--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -3,10 +3,16 @@
   android:versionCode="8" android:versionName="1.7"
   package="be.ugent.zeus.resto.client">
   <application android:icon="@drawable/logo" android:label="Heracles" android:theme="@android:style/Theme.Light">
-    <activity android:name=".RestoMenu">
+    <activity android:name=".Heracles">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+    <activity android:name=".RestoMenu">
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW"/>
+        <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
     </activity>
     <activity android:name=".RestoMap" android:theme="@android:style/Theme.NoTitleBar">
@@ -30,5 +36,5 @@
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-  <uses-sdk android:minSdkVersion="5" />
+  <uses-sdk android:minSdkVersion="8" />
 </manifest>
