--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
     </activity>
-    <activity android:name=".RestoMap">
+    <activity android:name=".BuildingMap">
       <intent-filter>
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
