--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -20,6 +20,7 @@
     </activity>
     <activity android:name=".Settings" />
     <activity android:name=".News" />
+    <activity android:name=".NewsItemActivity" />
     <activity android:name=".Calendar" />
     <activity android:name=".Info" />
     <activity android:name=".GSR" />
