--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -12,8 +12,8 @@
   <uses-sdk android:minSdkVersion="8" />
 
   <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/Theme.Heracles.Light">
-    <activity android:name=".Hydra" android:icon="@drawable/hydra">
-      <intent-filter android:icon="@drawable/icon">
+    <activity android:name=".Hydra" android:logo="@drawable/hydra">
+      <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
