Add xml parser, cache & intent service for activities #bedtime

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -44,6 +44,11 @@
         <action android:name="be.ugent.zeus.resto.client.data.services.RestoService" />
       </intent-filter>
     </service>
+    <service android:name=".data.services.ActivityIntentService">
+      <intent-filter>
+        <action android:name="be.ugent.zeus.resto.client.data.services.ActivityIntentService" />
+      </intent-filter>
+    </service>
     <service android:name=".data.services.NewsIntentService">
       <intent-filter>
         <action android:name="be.ugent.zeus.resto.client.data.services.NewsIntentService" />
