--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "iOS/RestKit"]
 	path = iOS/RestKit
-	url = git://github.com/RestKit/RestKit.git
+	url = git://github.com/Javache/RestKit.git
