--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
   <uses-sdk android:targetSdkVersion="15" android:minSdkVersion="8" />
 
-  <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/Theme.Sherlock">
+  <application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/Theme.Hydra.Light">
     <activity android:name=".Hydra" android:logo="@drawable/hydra">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
