More classpath changes

--- a/android/project.properties
+++ b/android/project.properties
@@ -9,5 +9,6 @@
 
 # Project target.
 target=Google Inc.:Google APIs:16
-android.library.reference.1=../android-libs/ab-sherlock-4.1.0/
 #manifestmerger.enable=true
+android.library=false
+android.library.reference.1=../android-libs/ab-sherlock-4.1.0
