Implement the remainder of the info functionality
TODO: the associations are not implemented yet (URGENT and DURFDOEN)

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -23,6 +23,7 @@
     <activity android:name=".NewsItemActivity" />
     <activity android:name=".Calendar" />
     <activity android:name=".Info" />
+    <activity android:name=".InfoWebActivity" />
     <activity android:name=".GSR" />
     <activity android:name=".BuildingMap" />
     <activity android:name=".RestoMenu" />
