--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "iOS/RestKit"]
-	path = iOS/RestKit
+[submodule "iOS/External/RestKit"]
+	path = iOS/External/RestKit
 	url = git://github.com/Javache/RestKit.git
