--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  android:versionCode="8" android:versionName="1.7"
+  android:versionCode="8" android:versionName="1.0-beta"
   package="be.ugent.zeus.resto.client">
 
   <uses-permission android:name="android.permission.INTERNET" />
