--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "iOS/External/RestKit"]
 	path = iOS/External/RestKit
 	url = git://github.com/Javache/RestKit.git
+[submodule "iOS/External/facebook-ios-sdk"]
+	path = iOS/External/facebook-ios-sdk
+	url = git://github.com/facebook/facebook-ios-sdk.git
