#50 #54 Fixed the localisation in the whole app

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -15,7 +15,11 @@
 
 	<uses-sdk android:targetSdkVersion="17" android:minSdkVersion="8" />
 
-	<application android:icon="@drawable/icon" android:label="@string/app_name" android:theme="@style/Theme.Hydra.Light">
+	<application android:name=".Localisation"
+			 android:icon="@drawable/icon" 
+			 android:label="@string/app_name" 
+			 android:theme="@style/Theme.Hydra.Light">
+
 		<activity android:name=".Hydra" android:logo="@drawable/hydra">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
