--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -20,7 +20,9 @@
 			 android:label="@string/app_name" 
 			 android:theme="@style/Theme.Hydra.Light">
 
-		<activity android:name=".Hydra" android:logo="@drawable/hydra">
+		<activity android:name=".Hydra" 
+			    android:logo="@drawable/hydra"
+			    android:theme="@style/Theme.Hydra.Light.CenteredBig">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
