--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
 	<uses-sdk android:targetSdkVersion="17" android:minSdkVersion="8" />
 
-	<application android:name=".Localisation"
+	<application
 			 android:icon="@drawable/icon" 
 			 android:label="@string/app_name" 
 			 android:theme="@style/Theme.Hydra.Light">
