--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,79 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	    android:versionCode="105" android:versionName="1.0-beta"
-	    package="be.ugent.zeus.hydra">
-	<!-- versionCode format: 
-	x     -> major changes new features 
-	x.y   -> coole update
-	x.y.z -> bugfixez
-	-->
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+          android:versionCode="105" android:versionName="1.0-beta"
+          package="be.ugent.zeus.hydra">
+    <!-- versionCode format: 
+   	x     -> major changes new features 
+   	x.y   -> coole update
+   	x.y.z -> bugfixez
+   	-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 
-	<uses-sdk android:targetSdkVersion="17" android:minSdkVersion="8" />
+    <uses-sdk android:targetSdkVersion="17" android:minSdkVersion="8" />
+    
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
-	<application
-			 android:icon="@drawable/icon" 
-			 android:label="@string/app_name" 
-			 android:theme="@style/Theme.Hydra.Light">
+    <permission
+        android:name="be.ugent.zeus.hydra.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+    <uses-permission android:name="be.ugent.zeus.hydra.permission.MAPS_RECEIVE"/>
 
-		<activity android:name=".Hydra" 
-			    android:logo="@drawable/hydra"
-			    android:theme="@style/Theme.Hydra.Light.CenteredBig">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.LAUNCHER"/>
-			</intent-filter>
-		</activity>
-		<activity android:name=".Settings" />
-		<activity android:name=".News" />
-		<activity android:name=".NewsItemActivity" />
-		<activity android:name=".Calendar" />
-		<activity android:name=".Info" />
-		<activity android:name=".InfoWebActivity" />
-		<activity android:name=".GSR" />
-		<activity android:name=".BuildingMap" />
-		<activity android:name=".RestoMenu" />
-		<activity android:name=".SchamperDaily" />
-		<activity android:name=".SchamperDailyItem" />
+    <application
+        android:icon="@drawable/icon" 
+        android:label="@string/app_name" 
+        android:theme="@style/Theme.Hydra.Light">
 
-		<service android:name=".data.services.UpdaterService">
-			<intent-filter>
-				<action android:name="be.ugent.zeus.hydra.data.services.UpdaterService" />
-			</intent-filter>
-		</service>
-		<service android:name=".data.services.MenuService">
-			<intent-filter>
-				<action android:name="be.ugent.zeus.hydra.data.services.MenuService" />
-			</intent-filter>
-		</service>
-		<service android:name=".data.services.RestoService">
-			<intent-filter>
-				<action android:name="be.ugent.zeus.hydra.data.services.RestoService" />
-			</intent-filter>
-		</service>
-		<service android:name=".data.services.ActivityIntentService">
-			<intent-filter>
-				<action android:name="be.ugent.zeus.hydra.data.services.ActivityIntentService" />
-			</intent-filter>
-		</service>
-		<service android:name=".data.services.NewsIntentService">
-			<intent-filter>
-				<action android:name="be.ugent.zeus.hydra.data.services.NewsIntentService" />
-			</intent-filter>
-		</service>
-		<service android:name=".data.services.GSRIntentService">
-			<intent-filter>
-				<action android:name="be.ugent.zeus.hydra.data.services.GSRIntentService" />
-			</intent-filter>
-		</service>
-		<service android:name=".data.services.SchamperDailyService">
-			<intent-filter>
-				<action android:name="be.ugent.zeus.hydra.data.services.SchamperDailyService" />
-			</intent-filter>
-		</service>
-		<uses-library android:name="com.google.android.maps" />
-	</application>
+        <activity android:name=".Hydra" 
+                  android:logo="@drawable/hydra"
+                  android:theme="@style/Theme.Hydra.Light.CenteredBig">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".Settings" />
+        <activity android:name=".News" />
+        <activity android:name=".NewsItemActivity" />
+        <activity android:name=".Calendar" />
+        <activity android:name=".Info" />
+        <activity android:name=".InfoWebActivity" />
+        <activity android:name=".GSR" />
+        <activity android:name=".BuildingMap" />
+        <activity android:name=".RestoMenu" />
+        <activity android:name=".SchamperDaily" />
+        <activity android:name=".SchamperDailyItem" />
+
+        <service android:name=".data.services.UpdaterService">
+            <intent-filter>
+                <action android:name="be.ugent.zeus.hydra.data.services.UpdaterService" />
+            </intent-filter>
+        </service>
+        <service android:name=".data.services.MenuService">
+            <intent-filter>
+                <action android:name="be.ugent.zeus.hydra.data.services.MenuService" />
+            </intent-filter>
+        </service>
+        <service android:name=".data.services.RestoService">
+            <intent-filter>
+                <action android:name="be.ugent.zeus.hydra.data.services.RestoService" />
+            </intent-filter>
+        </service>
+        <service android:name=".data.services.ActivityIntentService">
+            <intent-filter>
+                <action android:name="be.ugent.zeus.hydra.data.services.ActivityIntentService" />
+            </intent-filter>
+        </service>
+        <service android:name=".data.services.NewsIntentService">
+            <intent-filter>
+                <action android:name="be.ugent.zeus.hydra.data.services.NewsIntentService" />
+            </intent-filter>
+        </service>
+        <service android:name=".data.services.GSRIntentService">
+            <intent-filter>
+                <action android:name="be.ugent.zeus.hydra.data.services.GSRIntentService" />
+            </intent-filter>
+        </service>
+        <service android:name=".data.services.SchamperDailyService">
+            <intent-filter>
+                <action android:name="be.ugent.zeus.hydra.data.services.SchamperDailyService" />
+            </intent-filter>
+        </service>
+        
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBITAqykoWxmWtIhMHc-SLei2dL2Jpaq8Y"/>
+        
+        <uses-library android:name="com.google.android.maps" />
+    </application>
 </manifest>
