Added the ABS Maps V2 plugin

--- a/android/project.properties
+++ b/android/project.properties
@@ -11,3 +11,4 @@
 target=Google Inc.:Google APIs:17
 #manifestmerger.enable=true
 android.library.reference.1=libs/ab-sherlock-4.2
+android.library.reference.2=libs/google-play-services_lib
