--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <uses-sdk android:targetSdkVersion="17" android:minSdkVersion="8" />
     
@@ -50,7 +51,7 @@
                   android:configChanges="screenSize|orientation" />
         <activity android:name=".InfoWebActivity"
                   android:configChanges="screenSize|orientation" />
-        <activity android:name=".GSR"
+        <activity android:name=".Urgent"
                   android:configChanges="screenSize|orientation" />
         
         <activity android:name=".BuildingMap"
@@ -97,16 +98,28 @@
                 <action android:name="be.ugent.zeus.hydra.data.services.NewsIntentService" />
             </intent-filter>
         </service>
-        <service android:name=".data.services.GSRIntentService">
-            <intent-filter>
-                <action android:name="be.ugent.zeus.hydra.data.services.GSRIntentService" />
-            </intent-filter>
-        </service>
         <service android:name=".data.services.SchamperDailyService">
             <intent-filter>
                 <action android:name="be.ugent.zeus.hydra.data.services.SchamperDailyService" />
             </intent-filter>
         </service>
+        <service android:exported="false" android:name=".util.audiostream.MusicService">
+            <intent-filter>
+                <action android:name="be.ugent.zeus.hydra.util.audiostream.action.TOGGLE_PLAYBACK" />
+                <action android:name="be.ugent.zeus.hydra.util.audiostream.action.PLAY" />
+                <action android:name="be.ugent.zeus.hydra.util.audiostream.action.PAUSE" />
+                <action android:name="be.ugent.zeus.hydra.util.audiostream.action.STOP" />
+            </intent-filter>
+        </service>
+        <receiver android:name=".util.audiostream.MusicIntentReceiver">
+            <intent-filter>
+                <action android:name="android.media.AUDIO_BECOMING_NOISY" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
+        
         
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
