--- a/WP/Hydra/Resources/info-content.plist
+++ b/WP/Hydra/Resources/info-content.plist
@@ -4,6 +4,26 @@
 <array>
 	<dict>
 		<key>image</key>
+		<string>info-library</string>
+		<key>title</key>
+		<string>Bibliotheek</string>
+		<key>url-ios</key>
+		<string>itms-apps://itunes.apple.com/us/app/ub-gent/id362022518?mt=8</string>
+		<key>url-android</key>
+		<string>market://details?id=com.bredir.boopsie.ubgent</string>
+		<key>url</key>
+		<string>http://lib.ugent.be</string>
+	</dict>
+	<dict>
+		<key>image</key>
+		<string>info-minerva</string>
+		<key>title</key>
+		<string>Minerva Mobile</string>
+		<key>url</key>
+		<string>https://minerva.ugent.be/mobile/</string>
+	</dict>
+	<dict>
+		<key>image</key>
 		<string>info-sports</string>
 		<key>title</key>
 		<string>Sportvoorzieningen</string>
@@ -31,18 +51,6 @@
 	</dict>
 	<dict>
 		<key>image</key>
-		<string>info-library</string>
-		<key>title</key>
-		<string>Bibliotheek</string>
-		<key>url-ios</key>
-		<string>itms-apps://itunes.apple.com/us/app/ub-gent/id362022518?mt=8</string>
-		<key>url-android</key>
-		<string>market://details?id=com.bredir.boopsie.ubgent</string>
-		<key>html</key>
-		<string>http://lib.ugent.be</string>
-	</dict>
-	<dict>
-		<key>image</key>
 		<string>info-bicycle</string>
 		<key>title</key>
 		<string>Fietsen</string>
@@ -51,7 +59,7 @@
 	</dict>
 	<dict>
 		<key>image</key>
-		<string>info-studentdoctors</string>
+		<string>info-doctors</string>
 		<key>title</key>
 		<string>Studentenartsen</string>
 		<key>html</key>
