--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <uses-sdk android:targetSdkVersion="17" android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="17" />
     
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -39,8 +39,17 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".Settings"
+        <activity android:name=".settings.Settings"
                   android:configChanges="screenSize|orientation" />
+        
+        <activity android:name=".settings.AssociationsFilter"
+                  android:configChanges="screenSize|orientation" >
+            <intent-filter>
+                <action android:name=".settings.AssociationsFilter" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
         <activity android:name=".News"
                   android:configChanges="screenSize|orientation" />
         <activity android:name=".NewsItemActivity"
