--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -113,6 +113,11 @@
                 <action android:name="be.ugent.zeus.hydra.data.services.SchamperDailyService" />
             </intent-filter>
         </service>
+        <service android:name=".data.services.UrgentService">
+            <intent-filter>
+                <action android:name="be.ugent.zeus.hydra.data.services.UrgentService" />
+            </intent-filter>
+        </service>
         <service android:exported="false" android:name=".util.audiostream.MusicService">
             <intent-filter>
                 <action android:name="be.ugent.zeus.hydra.util.audiostream.action.TOGGLE_PLAYBACK" />
