--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -131,7 +131,7 @@
         
         <meta-data 
             android:name="com.facebook.sdk.ApplicationId" 
-            android:value="@string/fb_app_id"/>
+            android:value="@string/applicationId"/>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
