Revamped urgent to look more like iOS
Resto now shows closed days as closed. Facebook ALMOST completely
working(need to find a way to log the user out). Schamper now uses the
native colors of the os(according to user theme)

--- a/WP/Hydra/Hydra.csproj
+++ b/WP/Hydra/Hydra.csproj
@@ -96,6 +96,7 @@
     </Compile>
     <Compile Include="Converters\ActivityToBooleanConverter.cs" />
     <Compile Include="Converters\BooleanToStringConverter.cs" />
+    <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
     <Compile Include="Converters\ObjectHeaderActivityToVisibilityConverter.cs" />
     <Compile Include="Converters\ObjectHeaderNewsToVisibilityConverter.cs" />
     <Compile Include="Converters\ObjectToStyleConverter.cs" />
